2025-11-20 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/stackops.c,
  	  src/mos6502/genlshift.c,
  	  src/mos6502/genplus.c,
  	  src/mos6502/genminus.c,
  	  src/mos6502/gen.h,
  	  src/mos6502/gen.c:
  	  Partial fix for bug #3851.
  	  
2025-11-20 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/scripts/sdcc.nsi:
	  Include Rabbit 4000/5000/6000 libraries in Windows installer.

2025-11-19 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/ralloc.c,
  	  src/mos6502/gen.c:
  	  Improve register tracking.
  	  
2025-11-18 Gabriele Gorla <gorlik@yahoo.com>

  	* device/lib/mos6502/fabsf.s:
  	  Use ZP addressing to store fabs result.
  	* src/mos6502/gen.c,
  	  support/regression/fwk/lib/testfwk.c:
      Fix bug #3863

2025-11-16 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/gen.c,
  	  src/mos6502/main.c:
  	  Implement 8-bit rotate with constant.
  	* src/mos6502/genplus.c,
  	  src/mos6502/genlshift.c,
  	  src/mos6502/genrshift.c:
  	  Fix unused variable warnings.
  	* src/mos6502/gen.c,
  	  src/mos6502/main.c:
  	  Implement generic rotate with constant.
   	* src/mos6502/genplus.c,
  	  src/mos6502/genminus.c:
  	  Optimize genPlusInc and genMinusDec.

2025-11-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge undefined branch.

2025-11-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCutil.c,
	  support/regression/tests/idf_ucn_utf8.c:
	  Update identifier check for current (git master branch as of 2025-11-16) libu8ident.

2025-11-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: update some Rabbit related paths

2025-11-15 Janko Stamenović

	* sdas/as6500/r6500.h
	  sdas/as6500/r65adr.c
	  sdas/as6500/r65mch.c
	  sdas/as6500/r65pst.c
	  sdas/asxxsrc/asxxxx.h
	  Rebasing sdas assemblers to the current upstream: as6500

2025-11-15 Janko Stamenović

	* sdas/as6808/m08adr.c
	  sdas/as6808/m08mch.c
	  sdas/as6808/m08pst.c
	  sdas/as6808/m6808.h
	  sdas/asxxsrc/asxxxx.h