@@ -1,3 +1,9 @@
+2025-11-21 Gabriele Gorla <gorlik@yahoo.com>
+
+  	* src/mos6502/genrshift.c,
+  	  src/mos6502/genlshift.c:
+  	  Optimize right/left shift 16-bit values by 1.
+  	  
 2025-11-20 Gabriele Gorla <gorlik@yahoo.com>
 
   	* src/mos6502/stackops.c,
